Create functioning oauth with FB and TWTR, get a simple partial working

--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,3 +1,4 @@
+=render :partial => "shared/header"
 = form_tag article_path(:id => @article.id), :method => :put do
   = label :article, :title, "Title"
   = text_field :article, 'title'
