--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,5 @@
 %h1 Welcome to the blog of Barkledad
+=render :partial => "shared/header"
 %h3#index_message=flash[:message] if flash[:message]
 %table#articles_table
   %thead
