--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,3 +1,4 @@
+=render :partial => "shared/header"
 = form_tag articles_path do
   = label :article, :title, "Title"
   = text_field :article, 'title'
