--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,7 @@
 %div#welcome_header
   -if session[:user]
     %h4="Welcome back, #{session[:user].name}"
+    =link_to "Sign out", sign_out_path
   -else
     %h4 Sign in with
     =link_to "Twitter", "/auth/twitter"
